# uptime

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yaml  release.yaml
.sqlx/: query-27d1d16c18c01b0e38d08cdc9ba5239f4d7e562efc5c1e1e7f85bb286453a953.json  query-3f848def8a34205eff927c086aa14a0d3038ce3194056254acff88e103f8b90d.json  query-42d9d1bccc88af943290a4c7d00659919fede17b4f607264ec629441a5951a8c.json  query-4c0b62effbee033e128b3dc72d25aa07fb27e754b795493ed713b9ddf046aa80.json  query-8d5cec834c2b2b85a843aee9ada9eb4e5e15141cc1ae4f00b9340e231bf79b07.json  query-afca0edcd1cf3e569e7f3625fa0cc4192959529241a3a57a5b414d6ff1e69a0a.json  query-c1f99922f4fadc471ef4a3d127b95d312072a4542a09c12664e7aef5b6f68683.json  query-d7ce33d1a3f5fc430cc2f0c01667222b69cfdf88c510cfdfa5886319d4906e7c.json  query-eb062befd6f0e7215d23b9d4624379d70542a02b7da33c0efde215e10c5541d9.json
assets/: style.css
migrations/: 20241105200433_AddInitialSchema.sql  20241228081741_AddAlertRoutingSchema.sql  20241228084231_AddIndexForNotifications.sql
src/: main.rs  persistence.rs  poller.rs  router.rs  templates.rs  utils.rs
src/poller/: mod.rs  tests.rs
templates/: add-origin.tera.html  index.tera.html
