[package]
name = "uptime"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true

[dependencies]
aws-config = "1.2.0"
aws-sdk-s3 = "1.23.0"
chrono = { version = "0.4.37", features = ["serde"] }
lambda_runtime = "0.11.1"
reqwest = { version = "0.12.2", default-features = false, features = ["stream", "rustls-tls", "rustls-tls-webpki-roots"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
