[package]
name = "uptime"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true

[dependencies]
aws-config = "1.5.8"
aws-sdk-s3 = "1.56.0"
chrono = { version = "0.4.38", features = ["serde"] }
lambda_runtime = "0.13.0"
reqwest = { version = "0.12.8", default-features = false, features = ["stream", "rustls-tls", "rustls-tls-webpki-roots"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
