[package]
name = "uptime"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true

[dependencies]
axum = "0.7.9"
chrono = { version = "0.4.39", features = ["serde"] }
color-eyre = "0.6.3"
dotenvy = "0.15.7"
humantime = "2.1.0"
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "rustls-tls-webpki-roots"] }
serde = { version = "1.0.216", features = ["derive"] }
sqlx = { version = "0.8.2", default-features = false, features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
sqlx-bootstrap = { git = "https://github.com/alexander-jackson/sqlx-bootstrap.git", version = "0.1.0" }
tera = "1.20.0"
tokio = { version = "1.41.0", features = ["macros", "rt"] }
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }

[dev-dependencies]
mockito = "1.6.1"
